--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,11 @@ image: Visual Studio 2017
 build: off
 test: off
 before_build:
-#  - dotnet --info
-#  - dotnet restore Source/PrismLibrary_Core.sln
-#  - dotnet restore Source/PrismLibrary_Xamarin.sln
-#  - nuget restore Source/PrismLibrary_Win10.sln
-#  - nuget restore Source/PrismLibrary_Wpf.sln
+  - dotnet --info
+  - dotnet restore Source/PrismLibrary_Core.sln
+  - dotnet restore Source/PrismLibrary_Xamarin.sln
+  - nuget restore Source/PrismLibrary_Win10.sln
+  - nuget restore Source/PrismLibrary_Wpf.sln
 build_script:
   #- dotnet build Source/PrismLibrary_Core.sln
   #- msbuild Source/PrismLibrary_Xamarin.sln
